--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
-pubDate: 'Jul 02 2022'
+date: '2023-01-09'
 heroImage: '/blog-placeholder-5.jpg'
 ---
 
