fix: move blog posts to individual mdx files

--- a/src/content/blog/docker-localhost-mysql.mdx
+++ b/src/content/blog/docker-localhost-mysql.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/docker-localhost-mysql/cover.png"
 date: "2019-12-08"
 title: "Docker + Localhost MySQL"
 tags: ["servers", "linux", "mysql", "docker"]
