--- a/src/content/blog/lutris-overwatch.mdx
+++ b/src/content/blog/lutris-overwatch.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/lutris-overwatch/cover.png"
 date: "2020-05-22"
 title: "Installing Overwatch on Arch Linux"
 tags: ["overwatch", "gaming", "battle.net", "arch", "lutris"]
