--- a/src/content/blog/rememberthemilk.mdx
+++ b/src/content/blog/rememberthemilk.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/rememberthemilk/cover.png"
 date: "2018-04-14"
 title: "Remember the Milk Syntax"
 tags: ["organisation", "linux"]
