--- a/src/content/blog/serverless.mdx
+++ b/src/content/blog/serverless.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/serverless/cover.png"
 date: "2020-03-29"
 title: "My journey to serverless and back"
 tags: ["aws", "lambda", "netlify", "serverless"]
