--- a/src/content/blog/tailwind-read-progress.mdx
+++ b/src/content/blog/tailwind-read-progress.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/tailwind-read-progress/cover.png"
 date: "2021-06-21"
 title: "Tailwind Read Progress Bar"
 tags: ["web", "tailwindcss", "css"]
