--- a/src/content/blog/codespaces.mdx
+++ b/src/content/blog/codespaces.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/codespaces/cover.png"
 date: "2020-10-03"
 title: "Github Codespaces"
 tags: ["linux", "docker", "code", "github"]
