--- a/src/content/blog/gcalapi.mdx
+++ b/src/content/blog/gcalapi.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/gcalapi/cover.png"
 date: "2019-11-06"
 title: "Google Calendar API Sucks"
 tags: ["google calendar", "api", "rant"]
