--- a/src/content/blog/hassio.mdx
+++ b/src/content/blog/hassio.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/hassio/cover.png"
 date: "2020-06-23"
 title: "HomeAssistant RaspberryPi 4"
 tags: ["raspberrypi", "hassio", "homeassistant"]
