--- a/src/content/blog/headless_protonbridge.mdx
+++ b/src/content/blog/headless_protonbridge.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/headless_protonbridge/cover.png"
 date: '2022-09-20'
 title: 'ProtonBridge Headless Mode'
 tags: ['self hosted', 'mail', 'servers', 'linux']
