--- a/src/content/blog/magicmirror-list.mdx
+++ b/src/content/blog/magicmirror-list.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/magicmirror-list/cover.png"
 date: "2018-04-06"
 title: "MagicMirror"
 tags: ["side project", "self hosted", "linux"]
