--- a/src/content/blog/standardnotes.mdx
+++ b/src/content/blog/standardnotes.mdx
@@ -1,4 +1,5 @@
 ---
+heroImage: "blog/standardnotes/cover.png"
 date: "2019-12-06"
 title: "Standard Notes Selfhosted Installation"
 tags: ["servers", "linux", "standardnotes"]
