fix: cleanup post image paths and old imageFile frontmatter

--- a/src/content/blog/hassio.mdx
+++ b/src/content/blog/hassio.mdx
@@ -4,8 +4,6 @@ date: "2020-06-23"
 title: "HomeAssistant RaspberryPi 4"
 tags: ["raspberrypi", "hassio", "homeassistant"]
 category: "raspberrypi"
-cover:
-  imageFile: "hassio/cover.png"
 ---
 
 ## Introduction
@@ -66,7 +64,7 @@ b39de794b980        homeassistant/armv7-hassio-multicast:2                 /init
 
 This will bring up the "Preparing Home Assistant" screen. The following steps can take a while, so at this point maybe go have another coffee..
 
-![Welcome Screen](/assets/blog/hassio/welcome.png)
+![Welcome Screen](/blog/hassio/welcome.png)
 
 After the setup is done doing its thing, you will be redirected to the User setup wizard.
 
