fix: missing mdx component imports

--- a/src/content/blog/libvirt.mdx
+++ b/src/content/blog/libvirt.mdx
@@ -6,6 +6,9 @@ tags: ["linux", "vm"]
 category: "Linux"
 ---
 
+import ScreenshotLink from '../../components/ScreenshotLink.astro'
+import CodeEditor from '../../components/CodeEditor.astro'
+
 With a fresh desktop linux install, I wanted to avoid installing VirtualBox again and finally learn how to setup a KVM VM with tools such as `qemu` and `libvirt`.
 
 `libvirt` is a management tool that can be used to talk to hypervisors such as `qemu`. This simplifies working with `qemu` - the actual tool which does the hardware emulation.
