--- a/src/content/blog/link-screenshot.mdx
+++ b/src/content/blog/link-screenshot.mdx
@@ -6,6 +6,9 @@ tags: ["web", "ux"]
 category: "Development"
 ---
 
+import CodeEditor from '../../components/CodeEditor.astro'
+import ScreenshotLink from '../../components/ScreenshotLink.astro'
+
 I stumbled upon <ScreenshotLink text="@raunofreiberg" url="https://twitter.com/raunofreiberg" />'s UI/UX experiments at <ScreenshotLink text="uiw.tf" url="https://uiw.tf/" /> recently and was super inspired by the 'hover links for their screenshots' one. The gist of the idea is to show users a visual preview of the link they may be about to click. Upon playing with his implementation I knew I wanted to try building it for myself!
 
 Before I go into much further detail here, you can save yourself a bunch of work and use <ScreenshotLink text="@microlink" url="https://microlink.io/screenshot" />'s API which is designed for exactly this use-case. They offer an endpoint with a free plan that lets you generate 100 requests / day to which you can pass not only the URL you want to screenshot, but also some additional fancy stuff like backgrounds and browser overlays, etc.
