--- a/src/content/blog/plex-setup.mdx
+++ b/src/content/blog/plex-setup.mdx
@@ -6,6 +6,10 @@ tags: ["servers", "linux", "multimedia"]
 category: "Linux"
 ---
 
+import CodeEditor from '../../components/CodeEditor.astro'
+
+import ScreenshotLink from '../../components/ScreenshotLink.astro'
+
 This post will be mostly documentation for myself, but I also want to share with the world my setup for my personal media server.
 
 ## Preparation
