--- a/src/content/blog/tailwind-read-progress.mdx
+++ b/src/content/blog/tailwind-read-progress.mdx
@@ -6,6 +6,8 @@ tags: ["web", "tailwindcss", "css"]
 category: "web"
 ---
 
+import CodeEditor from '../../components/CodeEditor.astro'
+
 > Update: CSS is getting a native @scroll-timeline that will make this much easier! See Kevin Powell and Adam Argyle work with it in Chrome Canary [here](https://www.youtube.com/watch?v=mzKfetD9YrA). You can also check out the CSS Spec for [scroll-linked animation](https://drafts.csswg.org/scroll-animations-1/).
 
 It's that time of year again where I decided to rewrite my personal website 🎉
