--- a/src/content/blog/codespaces.mdx
+++ b/src/content/blog/codespaces.mdx
@@ -6,6 +6,8 @@ tags: ["linux", "docker", "code", "github"]
 category: "Development"
 ---
 
+import ScreenshotLink from '../../components/ScreenshotLink.astro'
+
 Github announced their new web based development environment called _Codespaces_ at their <ScreenshotLink url="https://github.blog/2020-05-06-new-from-satellite-2020-github-codespaces-github-discussions-securing-code-in-private-repositories-and-more/" text="Satellite 2020" /> Event. To be honest, this was the feature I was most excited about this year. And this evening, I finally got the email that I have access to the beta version of it!
 
 First things first, I had some trouble finding out how to launch a codespace for a given repo. I navigated around the repo README page a bit, and eventually found the option under the green "Code" button, where you can open the collapsible menu that contains the clone URL. There is now also an option to open the repo in a new codespace / a list of any existing codespaces for that repository.
