feat: basic design and light/dark swap

--- a/src/content/blog/headless_protonbridge.mdx
+++ b/src/content/blog/headless_protonbridge.mdx
@@ -1,9 +1,9 @@
 ---
 heroImage: "blog/headless_protonbridge/cover.png"
-date: '2022-09-20'
-title: 'ProtonBridge Headless Mode'
-tags: ['self hosted', 'mail', 'servers', 'linux']
-category: 'linux'
+date: "2022-09-20"
+title: "ProtonBridge Headless Mode"
+tags: ["self hosted", "mail", "servers", "linux"]
+category: "linux"
 ---
 
 import CodeEditor from '../../components/CodeEditor.astro'
