--- a/src/content/blog/retropie.mdx
+++ b/src/content/blog/retropie.mdx
@@ -1,7 +1,7 @@
 ---
 heroImage: "blog/retropie/cover.png"
 date: "2018-04-06"
-title: Retropie
+title: "Retropie"
 tags: ["raspberry pi", "side project", "linux"]
 category: "side project"
 ---
